--- a/漫谈爬虫.MD
+++ b/漫谈爬虫.MD
@@ -1,3 +1,4 @@
+发布于[漫谈数据采集gitchat](https://gitbook.cn/gitchat/activity/5c3f3f6c4ba433528f024b78)
 > 本chat主要从以下6个方面来展开
 
 - 爬虫的来由，应用场景，数据价值
@@ -5,7 +6,6 @@
 - 爬虫国内外产品竞品分析
 - 爬虫技术应用延伸拓展
 - 分布式企业级爬虫实践
-- 开发爬虫应用赚钱小思路
 
 *首先本chat旨在让大家对爬虫形成，价值，实现，周边等有一个全面的认识，而不是事无巨细的讲解爬虫的各种具体实现，如果大家有这方面的兴趣和具体爬虫问题可以线上和建微信群就交流*
 
