--- a/操润贴(青涯)求职简历.md
+++ b/操润贴(青涯)求职简历.md
@@ -5,7 +5,7 @@
 --
 操润贴(花名:青涯)/男/88年
 
-专科/自学成才 (<span style='color:red;font-weight:bold'>如果您过于介意我的学历，勿扰</span>)
+大专 (<span style='color:red;font-weight:bold'>如果您过于介意我的学历，勿扰</span>)
 
 工作年限:9年
 
