如何精读代码
如何精读代码

--- a/如何精读开源代码.md
+++ b/如何精读开源代码.md
@@ -18,4 +18,32 @@
 
 > TODO disruptor/elasticsearch的源码阅读笔记
 
+--
+
+> elasticsearch 
+
+1、比如elasticsearch的一致性如何实现？（节点一致性、meta一致性，data一致性)
+
+2、elasticsearch高可用性如何实现? (shard分配机制，shard复制机制，failover机制)
+
+3、elasticsearch高性能如何实现？(Luence 倒排 正排 fst bkdtree 等算法实现)
+
+4、elasticsearch的数据读写
+
+5、elasticsearch通信机制 
+
+6、elasticsearch插件实现机制
+
+> disruptor
+
+1、disruptor解决什么问题? free lock
+
+2、了解相关操作系统背景知识 [cpu cache](https://github.com/BigDataMatrix/thinkabout/blob/master/java%E4%B8%8E%E7%B3%BB%E7%BB%9F.md)
+
+3、使用demo
+
+4、整理类库的graph(依赖关系和流程图)
+
+......
+
 [codefollower](https://github.com/codefollower)
